--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Hello.
+Orc Slayer 1986.
+
+It's a turn based Python game. You put in your name and fight an orc. The orc is pretty balanced. Not compared to Orc Slayer 1985 where the orc was overpowered! 
